--- a/templates/projects.html
+++ b/templates/projects.html
@@ -20,10 +20,10 @@
 	<div class="row">
 		<div class = "col-sm-3 text-center pads"></div>
 		<div class = "col-sm-3 text-center pads">
-			<a target="_blank" href="https://github.com/baileywjohnson/webgl-ducks"><img class="box" src="{{url_for('static', filename='webgl-ducks.svg')}}"></a>
+			<a target="_blank" href="https://github.com/baileywjohnson/mpi-matrix-mult"><img class="box" src="{{url_for('static', filename='mpi-matrix-mult.svg')}}"></a>
 		</div>
 		<div class = "col-sm-3 text-left pads">
-			<p>Some Information about WebGL Ducks</p>
+			<p>This is an implementation of serial and parallel matrix multiplication in C using MPI. The executables and helper functions here are built on top of a matrix/vector input/output/redistribution function library written by <a target="_blank" href="https://www.michaeljquinn.net/">Michael J. Quinn</a>.</p>
 		</div>
 	</div>
 	<div class="row">
@@ -35,16 +35,16 @@
 	<div class="row">
 		<div class = "col-sm-3 text-center pads"></div>
 		<div class = "col-sm-3 text-center pads">
-			<a target="_blank" href="https://github.com/baileywjohnson/ctci-v6-python"><img class="box" src="{{url_for('static', filename='ctci-v6-python.svg')}}"></a>
+			<a target="_blank" href="https://github.com/baileywjohnson/webgl-ducks"><img class="box" src="{{url_for('static', filename='webgl-ducks.svg')}}"></a>
 		</div>
 		<div class = "col-sm-3 text-left pads">
-			<p>I picked up a copy of Gayle McDowell's <i>Cracking the Coding Interview</i> and wanted to keep track of my solutions (so that I could compare them to the <a target="_blank" href="https://github.com/careercup/CtCI-6th-Edition-Python">official solutions</a>).</p>
+			<p>This is a 3D interactive WebGL project built using <a>Edward Angel's framework</a>. The duck/human objects are rendered in through recursive functions- each traversing a list of nodes that make up the 3D models.</p>
 		</div>
 	</div>
 	<div class="row">
 		<div class = "col-sm-3 text-center pads"></div>
 		<div class = "col-sm-6 text-center pads">
-			<hr/>
+			<p id="projects-btext">To view additional projects (including this portfolio), please visit my <a target="_blank" href="https://github.com/baileywjohnson/">Github profile</a>.</p>
 		</div>
 	</div>
 
