URL for WebGL Library

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -38,7 +38,7 @@
 			<a target="_blank" href="https://github.com/baileywjohnson/webgl-ducks"><img class="box" src="{{url_for('static', filename='webgl-ducks.svg')}}"></a>
 		</div>
 		<div class = "col-sm-3 text-left pads">
-			<p>This is a 3D interactive WebGL project built using <a>Edward Angel's framework</a>. The duck/human objects are rendered in through recursive functions- each traversing a list of nodes that make up the 3D models.</p>
+			<p>This is a 3D interactive WebGL project built using <a target="_blank" href="https://github.com/esangel/WebGL">Edward Angel's framework</a>. The duck/human objects are rendered in through recursive functions- each traversing a list of nodes that make up the 3D models.</p>
 		</div>
 	</div>
 	<div class="row">
