Updates to Projects Page

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -7,8 +7,8 @@
 			<a target="_blank" href="https://github.com/baileywjohnson/twitterminer/"><img class="box" src="{{url_for('static', filename='twitterminer.svg')}}"></a>
 		</div>
 		<div class = "col-sm-3 text-left pads">
+			<p><b>In-Development</b></p>
 			<p>TwitterMiner is a Python tool written by <a target="_blank" href="https://github.com/BrainRift">Kevin DeLong</a> that scrapes Twitter data and stores it in a sqlite database. This fork adds an API for custom scraping queries and a React frontend.</p>
-			<a href="https://baileyjohnson.io/twitterminer"><button class="btn btn-default" id="demo-button"> View Live </button></a>
 		</div>
 	</div>
 	<div class="row">
@@ -44,7 +44,7 @@
 	<div class="row">
 		<div class = "col-sm-3 text-center pads"></div>
 		<div class = "col-sm-6 text-center pads">
-			<p id="projects-btext">To view additional projects (including this portfolio), please visit my <a target="_blank" href="https://github.com/baileywjohnson/">Github profile</a>.</p>
+			<p id="projects-btext"><b>To view additional projects (including this portfolio), please visit my <a target="_blank" href="https://github.com/baileywjohnson/">Github profile</a>.</b></p>
 		</div>
 	</div>
 
